Fix two Markdown bugs

--- a/site/manual.html
+++ b/site/manual.html
@@ -1431,4 +1431,4 @@ const titleRegEx = /([^.\\/]+)\.md$/;  // A helper.
 </div> <!-- demo -->
 <script src="./demo.min.js"></script>
 </body>
-<p>&lt;/html&gt;</p>
+</html>
