--- a/site/manual.html
+++ b/site/manual.html
@@ -443,14 +443,15 @@ a[5:end]  # returns &quot;efg&quot;</code></pre><p><strong>Math String</strong><
 <dt id='matrix'>Matrix</dt>
 <dd><p>A Hurmet <em>matrix</em> is a one or two dimensional arrangement of matrix elements. A Hurmet matrix element can be a number, a string, <code>true</code>, <code>false</code>, or an exprression that resolves to one of those simple types.</p>
 <p>A matrix literal is written between delimiters, either <code>( )</code> or <code>[ ]</code> or <code>{: }</code>. Matrix elements are horizontally separated by tabs or commas. Matrix rows are separated by semi-colons. So this: <code>(1, 0; 0, 1)</code> renders as <span class='hurmet-calc' data-entry='(1, 0; 0, 1)'><math><mrow><mo fence="true" form="prefix">(</mo><mtable columnalign="center center"><mtr><mtd><mn>1</mn></mtd><mtd><mn>0</mn></mtd></mtr><mtr><mtd><mn>0</mn></mtd><mtd><mn>1</mn></mtd></mtr></mtable><mo fence="true" form="postfix">)</mo></mrow></math></span>.</p>
-<p>A Hurmet <em>vector</em> is a one dimensional array. If you multiply it times a matrix, a Hurmet vector will act like a column vector. Write a vector literal with values separated by semi-colons.</p>
+<p>A Hurmet <em>vector</em> is a one dimensional array. Write a vector literal with values separated by commas or semi-colons, but not both.</p>
 <table><tr><th>Input</th>
 <th>Renders as</th>
 </tr>
-<tr><td><code>[2.1; -15.3]</code></td><td><span class='hurmet-calc' data-entry='[2.1; -15.3]'><math><mrow><mo fence="true" form="prefix">[</mo><mtable columnalign="center"><mtr><mtd><mn>2.1</mn></mtd></mtr><mtr><mtd><mrow><mtext>-</mtext><mn>15.3</mn></mrow></mtd></mtr></mtable><mo fence="true" form="postfix">]</mo></mrow></math></span></td></tr>
+<tr><td><code>[2.1, -15.3]</code></td><td><span class='hurmet-calc' data-entry='[2.1, -15.3]'><math><mrow><mo fence="true" form="prefix">[</mo><mtable columnalign="center center"><mtr><mtd><mn>2.1</mn></mtd><mtd><mrow><mtext>-</mtext><mn>15.3</mn></mrow></mtd></mtr></mtable><mo fence="true" form="postfix">]</mo></mrow></math></span></td></tr>
 <tr><td><code>[4; 5]</code></td><td><span class='hurmet-calc' data-entry='[4; 5]'><math><mrow><mo fence="true" form="prefix">[</mo><mtable columnalign="center"><mtr><mtd><mn>4</mn></mtd></mtr><mtr><mtd><mn>5</mn></mtd></mtr></mtable><mo fence="true" form="postfix">]</mo></mrow></math></span></td></tr>
+<tr><td><code>[]</code></td><td><span class='hurmet-calc' data-entry='[]'><math><mrow><mo form="prefix" stretchy="false">[</mo><mo form="postfix" stretchy="false">]</mo></mrow></math></span></td></tr>
 </table>
-<p>Another way to create a Hurmet vector is to write a range of numbers between brackets; the form is <code>[start:step:end...]</code>. A Hurmet calculation of that form will return a vector with every number in the range. The step size is optional (default = 1). Examples:</p>
+<p>  <br>Another way to create a Hurmet column vector is to write a range of numbers between brackets; the form is <code>[start:step:end...]</code>. A Hurmet calculation of that form will return a column vector with every number in the range. The step size is optional (default = 1). Examples:</p>
 <table><tr><th>Input</th>
 <th>Result</th>
 </tr>
@@ -479,8 +480,9 @@ a[5:end]  # returns &quot;efg&quot;</code></pre><p><strong>Math String</strong><
 <p><span class='hurmet-calc' data-entry='|𝐀|'><math><mrow><mi>|</mi><mi>𝐀</mi><mi>|</mi></mrow></math></span> ↦ <span class='hurmet-calc' data-entry='{determinant if "𝐀 is square"; magnitude otherwise}'><math><mrow><mo fence="true" form="prefix">{</mo><mtable class="tml-cases"><mtr><mtd><mrow><mrow><mi mathvariant="normal">d</mi></mrow><mrow><mi mathvariant="normal">e</mi></mrow><mrow><mi mathvariant="normal">t</mi></mrow><mrow><mi mathvariant="normal">e</mi></mrow><mrow><mi mathvariant="normal">r</mi></mrow><mrow><mi mathvariant="normal">m</mi></mrow><mrow><mi mathvariant="normal">i</mi></mrow><mrow><mi mathvariant="normal">n</mi></mrow><mrow><mi mathvariant="normal">a</mi></mrow><mrow><mi mathvariant="normal">n</mi></mrow><mrow><mi mathvariant="normal">t</mi></mrow></mrow></mtd><mtd><mrow><mrow><mspace width="0.2778em"></mspace><mrow><mrow><mi mathvariant="normal">i</mi></mrow><mrow><mi mathvariant="normal">f</mi></mrow></mrow><mspace width="0.2778em"></mspace></mrow><mtext>𝐀 is square</mtext></mrow></mtd></mtr><mtr><mtd><mrow><mrow><mi mathvariant="normal">m</mi></mrow><mrow><mi mathvariant="normal">a</mi></mrow><mrow><mi mathvariant="normal">g</mi></mrow><mrow><mi mathvariant="normal">n</mi></mrow><mrow><mi mathvariant="normal">i</mi></mrow><mrow><mi mathvariant="normal">t</mi></mrow><mrow><mi mathvariant="normal">u</mi></mrow><mrow><mi mathvariant="normal">d</mi></mrow><mrow><mi mathvariant="normal">e</mi></mrow></mrow></mtd><mtd><mrow><mspace width="0.2778em"></mspace><mrow><mrow><mi mathvariant="normal">o</mi></mrow><mrow><mi mathvariant="normal">t</mi></mrow><mrow><mi mathvariant="normal">h</mi></mrow><mrow><mi mathvariant="normal">e</mi></mrow><mrow><mi mathvariant="normal">r</mi></mrow><mrow><mi mathvariant="normal">w</mi></mrow><mrow><mi mathvariant="normal">i</mi></mrow><mrow><mi mathvariant="normal">s</mi></mrow><mrow><mi mathvariant="normal">e</mi></mrow></mrow><mspace width="0.2778em"></mspace></mrow></mtd></mtr></mtable><mo fence="true" form="postfix"></mo></mrow></math></span></p>
 <p><span class='hurmet-calc' data-entry='abs(𝐀)'><math><mrow><mi>abs</mi><mo>⁡</mo></mrow><mrow><mo form="prefix" stretchy="false">(</mo><mi>𝐀</mi><mo form="postfix" stretchy="false">)</mo></mrow></math></span> ↦ element-wise absolute values</p>
 <p><span class='hurmet-calc' data-entry='‖𝐀‖'><math><mrow><mtext>‖</mtext><mi>𝐀</mi><mtext>‖</mtext></mrow></math></span> ↦ <span class='hurmet-calc' data-entry='{√(x_1^2 + ⋯ + x_n^2) if "𝐀 is a vector"; √(∑_i ∑_j A_ij^2) if "𝐀 is a matrix"'><math><mrow><mo fence="true" form="prefix">{</mo><mtable class="tml-cases"><mtr><mtd><msqrt><mrow><mi>x</mi><msup><msub><mrow></mrow><mtext>1</mtext></msub><mn>2</mn></msup><mo>+</mo><mo>⋯</mo><mo>+</mo><mi>x</mi><msup><msub><mrow></mrow><mtext>n</mtext></msub><mn>2</mn></msup></mrow></msqrt></mtd><mtd><mrow><mrow><mspace width="0.2778em"></mspace><mrow><mrow><mi mathvariant="normal">i</mi></mrow><mrow><mi mathvariant="normal">f</mi></mrow></mrow><mspace width="0.2778em"></mspace></mrow><mtext>𝐀 is a vector</mtext></mrow></mtd></mtr><mtr><mtd><msqrt><mrow><msub><mo movablelimits="false">∑</mo><mi>i</mi></msub><msub><mo movablelimits="false">∑</mo><mi>j</mi></msub><mi>A</mi><msup><msub><mrow></mrow><mtext>ij</mtext></msub><mn>2</mn></msup></mrow></msqrt></mtd><mtd><mrow><mrow><mspace width="0.2778em"></mspace><mrow><mrow><mi mathvariant="normal">i</mi></mrow><mrow><mi mathvariant="normal">f</mi></mrow></mrow><mspace width="0.2778em"></mspace></mrow><mtext>𝐀 is a matrix</mtext></mrow></mtd></mtr></mtable><mo fence="true" form="postfix"></mo></mrow></math></span></p>
-<p><span class='hurmet-calc' data-entry='𝐀 & 𝐁'><math><mrow><mi>𝐀</mi><mo lspace="0.2222em" rspace="0.2222em">&amp;</mo></mrow><mrow><mi>𝐁</mi></mrow></math></span> or <span class='hurmet-calc' data-entry='hcat(𝐀, 𝐁)'><math><mrow><mi>hcat</mi><mo>⁡</mo></mrow><mrow><mo form="prefix" stretchy="false">(</mo><mi>𝐀</mi><mo separator="true">,</mo><mspace width="0.2222em"></mspace></mrow><mrow><mi>𝐁</mi><mo form="postfix" stretchy="false">)</mo></mrow></math></span> ↦ concatenate 𝐀 and 𝐁 horizontally</p>
+<p><span class='hurmet-calc' data-entry='𝐀 & 𝐁'><math><mrow><mi>𝐀</mi><mo lspace="0.2222em" rspace="0.2222em">&amp;</mo></mrow><mrow><mi>𝐁</mi></mrow></math></span> or <span class='hurmet-calc' data-entry='hcat(𝐀, 𝐁)'><math><mrow><mi>hcat</mi><mo>⁡</mo></mrow><mrow><mo form="prefix" stretchy="false">(</mo><mi>𝐀</mi><mo separator="true">,</mo><mspace width="0.2222em"></mspace></mrow><mrow><mi>𝐁</mi><mo form="postfix" stretchy="false">)</mo></mrow></math></span> ↦ concatenate matrices 𝐀 and 𝐁 horizontally</p>
 <p><span class='hurmet-calc' data-entry='vcat(𝐀, 𝐁)'><math><mrow><mi>vcat</mi><mo>⁡</mo></mrow><mrow><mo form="prefix" stretchy="false">(</mo><mi>𝐀</mi><mo separator="true">,</mo><mspace width="0.2222em"></mspace></mrow><mrow><mi>𝐁</mi><mo form="postfix" stretchy="false">)</mo></mrow></math></span> ↦ concatenate 𝐀 and 𝐁 vertically</p>
+<p><span class='hurmet-calc' data-entry='𝐀 & e'><math><mrow><mi>𝐀</mi><mo lspace="0.2222em" rspace="0.2222em">&amp;</mo></mrow><mrow><mi>e</mi></mrow></math></span> ↦ append an element to any vector</p>
 <p>Functions will mostly work element-wise on an matrix. Exception: functions <code>min()</code> and <code>max()</code> will find the minimum or maximum of the elements in the matrix.</p>
 <p>If you want to write a semi-colon inside parentheses and not create a matrix, use <code>\;</code>.</p>
 </dd>
@@ -646,8 +648,9 @@ Col B	11	25	14`` 'kips'"><math><mrow><mi>P</mi><msub><mrow></mrow><mtext>a</mtex
 </div>
 <h2 id='functions'>Functions</h2>
 <p>Hurmet treats an <a href='#identifiers'>identifier</a> as a function name if it is placed directly before an open parenthesis. So a term like <span class='hurmet-calc' data-entry='sinh(x)'><math><mrow><mi>sinh</mi><mo>⁡</mo></mrow><mrow><mo form="prefix" stretchy="false">(</mo><mi>x</mi><mo form="postfix" stretchy="false">)</mo></mrow></math></span> is a function.</p>
-<p>Hurmet’s built-in functions are described below. Unless noted otherwise, they can operate on any real or complex number or any matrix containing real numbers.</p>
+<p>Functions can return multiple values if the return statement is written in the form:  <code>return a, b, c, …, z</code></p>
 <p>Transcendental functions such as trigonometry or logarithms are done to 15 digits precision.</p>
+<p>Hurmet’s built-in functions are described below. Unless noted otherwise, they can operate on any real or complex number or any matrix containing real numbers.</p>
 <hr>
 <dl>
 <dt id='abs'>abs(z)</dt>
@@ -697,17 +700,21 @@ Col B	11	25	14`` 'kips'"><math><mrow><mi>P</mi><msub><mrow></mrow><mtext>a</mtex
 <dt id='exp'>exp(<em>z</em>)</dt>
 <dd><p><span class='hurmet-calc' data-entry='e^z'><math><msup><mi>e</mi><mi>z</mi></msup></math></span></p>
 </dd>
-<dt id='floor'>Floor(<em>x</em>)</dt>
-<dd><p>Floor. Always rounds down. Real numbers only.</p>
-</dd>
 <dt id='fetch'>fetch(<em>url</em>)</dt>
 <dd><p>Fetches the contents of a remote file. It expects the file to be in CSV format and will return a data range. Fetch functions must be stand-alone expressions.</p>
+</dd>
+<dt id='findfirst'>findfirst(<em>searchstring</em>, <em>string</em>)</dt>
+<dd><p>Searches the <em>string</em> and returns the index of the first occurence of <em>searchstring</em>.</p>
+</dd>
+<dt id='floor'>floor(<em>x</em>)</dt>
+<dd><p>floor. Always rounds down. Real numbers only.</p>
 </dd>
 <dt id='gcd'>gcd(<em>m</em>, <em>n</em>)</dt>
 <dd><p>Greatest common divisor of two integers.</p>
 </dd>
-<p>hcat(<em>v</em>, <em>x</em>)</p>
-<p>Horizontal concatenation of: two strings, or two matrices, or an element onto a vector, or a variable onto a map, or a vector onto a data frame.</p>
+<dt id='hcat'>hcat(<em>v</em>, <em>x</em>)</dt>
+<dd><p>Horizontal concatenation of: two strings, or two matrices, or an element onto a vector, or a variable onto a map, or a vector onto a data frame.</p>
+</dd>
 <dt id='hypot'>hypot(<em>x</em>, <em>y</em>)</dt>
 <dd><p><span class='hurmet-calc' data-entry='√(x² + y²)'><math><msqrt><mrow><msup><mi>x</mi><mn>2</mn></msup><mo>+</mo><msup><mi>y</mi><mn>2</mn></msup></mrow></msqrt></math></span>   …done in a way that avoids overflow. Real numbers only.</p>
 </dd>
@@ -747,6 +754,9 @@ Col B	11	25	14`` 'kips'"><math><mrow><mi>P</mi><msub><mrow></mrow><mtext>a</mtex
 <dt id='mod'>mod(<em>x</em>, <em>y</em>)</dt>
 <dd><p><em>x</em> modulo <em>y</em>. This functions divides <em>x</em> by <em>y</em>, and returns the absolute value of the remainder.</p>
 </dd>
+<dt id='number'>number(<em>string</em>)</dt>
+<dd><p>Converts a string, such as &quot;5&quot; or &quot;3.14&quot; to a number.</p>
+</dd>
 <dt id='rand'>rand(), rand(<em>n</em>), rand(<em>m</em>, <em>n</em>)</dt>
 <dd><p>Pseudo-random number(s) in the range from 0 to 1 (inclusive of 0, but not 1). Good for Monte-Carlo modeling. Not sufficiently random for crypto.</p>
 <p>The optional arguments are integers. <em>rand</em> with no arguments will return a single random number. If one or two arguments are provided, <em>rand</em> will return a matrix filled with random numbers.</p>
@@ -772,8 +782,9 @@ Col B	11	25	14`` 'kips'"><math><mrow><mi>P</mi><msub><mrow></mrow><mtext>a</mtex
 <dt id='transpose'>transpose(<em>M</em>)</dt>
 <dd><p>Transpose a matrix.</p>
 </dd>
-<p>vcat(<em>v</em>, <em>x</em>)</p>
-<p>Vertical concatenation of: two matrices, or an element onto a vertical vector.</p>
+<dt id='vcat'>vcat(<em>v</em>, <em>x</em>)</dt>
+<dd><p>Vertical concatenation of: two matrices, or an element onto a vertical vector.</p>
+</dd>
 <dt id='zeros'>zeros(<em>m</em>, <em>n</em>)</dt>
 <dd><p>Returns a <em>m</em> × <em>n</em> matrix filled with zeros.  Real numbers only.</p>
 </dd>
