Fix ref to modulo in docs

--- a/site/manual.html
+++ b/site/manual.html
@@ -1099,7 +1099,7 @@ end</code></pre></dd>
 <dd><p>A <em>while</em> loop executes a code block repeatedly, as long as a condition holds true. Example:</p>
 <pre><code>while b ≠ 0
     h = b
-    b = a modulo b
+    b = mod(a, b)
     a = h
 end</code></pre></dd>
 <dt id='for'>for</dt>
