--- a/preview/index.html
+++ b/preview/index.html
@@ -13,7 +13,7 @@
 <body>
 <nav>
    <ul>
-    <li><a href="./examples.html" target="_blank">Examples</a></li>
+    <li><a href="./sample.html" target="_blank">Sample</a></li>
      <li><a href="./manual.html" target="_blank">Documentation</a></li>
      <li><a href="https://github.com/ronkok/Hurmet" target="_blank" style="color:#000">GitHub</a></li>
    </ul>
