--- a/site/sample.html
+++ b/site/sample.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hurmet Examples</title>
+  <title>Hurmet Sample</title>
   <link rel="icon" href="./images/favicon.svg"/>
   <link rel="stylesheet" href="./styles.min.css">
   <style id="pageStyle">@media print {@page{size: letter; margin: 16mm 0.75in 16mm 0.75in;}}</style>
