--- a/site/manual.html
+++ b/site/manual.html
@@ -4,9 +4,8 @@
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Hurmet Manual</title>
-   <link rel="icon" href="./images/favicon.svg"/>
-   <link rel="stylesheet" href="./docStyles.min.css">
-   <script src="hurmet.min.js"></script>
+   <link rel="manifest" href="/app.webmanifest">
+   <link rel="stylesheet" href="/docStyles.min.css">
 </head>
 <body>
 <main>
@@ -1427,6 +1426,6 @@ const titleRegEx = /([^.\\/]+)\.md$/;  // A helper.
 <div id="input-container"><form><div id="demo-input"></div></form></div>
 <div id="demo-output"></div>
 </div> <!-- demo -->
-<script src="./demo.min.js"></script>
+<script type="module" src="./demo.min.js"></script>
 </body>
 </html>
