Use Latin Modern font from cache

--- a/site/index.html
+++ b/site/index.html
@@ -72,9 +72,9 @@ a_subscript   b^exponent    x′
 [start:step:end...] = ?
 {a if b; c otherwise}
 Access:
-  vector[number]
-  dataFrame.row.col
-  dataframe["col"]["row"]
+  vector[indexNumber]
+  dataFrame.rowName.colName
+  dataframe["colName"][indexNumber]
 Display:
   ? all, @ result only
   % no echo, ! no result</code></pre>
