--- a/site/manual.html
+++ b/site/manual.html
@@ -5,6 +5,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Hurmet Manual</title>
    <link rel="manifest" href="/app.webmanifest">
+   <link rel="icon" href="./images/favicon.svg">
    <link rel="stylesheet" href="/docStyles.min.css">
 </head>
 <body>
@@ -1187,6 +1188,8 @@ const titleRegEx = /([^.\\/]+)\.md$/;  // A helper.
 <p>A big document with a lot of math may cause typing lag. You can regain speed by clicking on the Draft Mode toggle button at <strong>File | Draft mode</strong>. It will render math as plain text and omit the blue echos.</p>
 <h4 id='matrix-multiplication'>Matrix multiplication</h4>
 <p>To get element-wise multiplication of two matrices, the operator symbol must be <a href='#matrix-mult'>explicitly</a> written as <code>∘</code> or <code>.*</code>.</p>
+<h4 id='offline'>Offline</h4>
+<p>If Hurmet does not work offline, it may be because the browser is deleting cookies. If that is the case, whitelist &quot;hurmet.app&quot;.</p>
 <h2 id='gists'>Gists</h2>
 <p>Hurmet can export or import a document in <a href='https://guides.github.com/features/mastering-markdown/'>Markdown</a> format. This is useful for collaboration.</p>
 <p>Say that you have written a calculation. It’s awesome and you want to share it so that others can use it as a template. An easy way to share work is via a GitHub <a href='https://gist.github.com/'>Gist</a>. Then anyone can view it, download it, or comment on it. Here’s an <a href='https://gist.githubusercontent.com/ronkok/7fec7d11f6fb6a031e5a0827e3531d68/raw/EndPlateConnectionExample.md'>example</a>.</p>
