--- a/site/manual.html
+++ b/site/manual.html
@@ -703,8 +703,11 @@ Col B	11	25	14`` 'kips'"><math><mrow><mi>P</mi><msub><mrow></mrow><mtext>a</mtex
 <dt id='fetch'>fetch(<em>url</em>)</dt>
 <dd><p>Fetches the contents of a remote file. It expects the file to be in CSV format and will return a data range. Fetch functions must be stand-alone expressions.</p>
 </dd>
-<dt id='findfirst'>findfirst(<em>searchstring</em>, <em>string</em>)</dt>
-<dd><p>Searches the <em>string</em> and returns the index of the first occurence of <em>searchstring</em>.</p>
+<p>findfirst(<em>searchstring</em>, <em>string</em>)<br>findfirst(<em>value</em>, <em>vector</em>)<br>findfirst(<em>booleanVector</em>)</p>
+<dd><p>Searches the <em>string</em> (<em>vector</em>) and returns the index of the first occurence of <em>searchstring</em> (<em>value</em>).<br>If only one (vector) argment is provided, <code>findfirst</code> will return the index of the first <code>true</code>.</p>
+</dd>
+<dt id='findmax'>findmax(<em>v</em>)</dt>
+<dd><p>Find the maximum numeric value of a vector. Returns the value and the index. So you would call it this way:<br><code>max, index = findmax(𝐕) = ?</code></p>
 </dd>
 <dt id='floor'>floor(<em>x</em>)</dt>
 <dd><p>floor. Always rounds down. Real numbers only.</p>
@@ -757,6 +760,9 @@ Col B	11	25	14`` 'kips'"><math><mrow><mi>P</mi><msub><mrow></mrow><mtext>a</mtex
 <dt id='number'>number(<em>string</em>)</dt>
 <dd><p>Converts a string, such as &quot;5&quot; or &quot;3.14&quot; to a number.</p>
 </dd>
+<dt id='ones'>ones(<em>m</em>, <em>n</em>)</dt>
+<dd><p>Returns a <em>m</em> × <em>n</em> matrix filled with ones.  Arguments must be integers.</p>
+</dd>
 <dt id='rand'>rand(), rand(<em>n</em>), rand(<em>m</em>, <em>n</em>)</dt>
 <dd><p>Pseudo-random number(s) in the range from 0 to 1 (inclusive of 0, but not 1). Good for Monte-Carlo modeling. Not sufficiently random for crypto.</p>
 <p>The optional arguments are integers. <em>rand</em> with no arguments will return a single random number. If one or two arguments are provided, <em>rand</em> will return a matrix filled with random numbers.</p>
@@ -777,7 +783,10 @@ Col B	11	25	14`` 'kips'"><math><mrow><mi>P</mi><msub><mrow></mrow><mtext>a</mtex
 <dd><p>Takes a number, <em>x</em>, and returns a string. <em>spec</em> is a rounding specification. It can round to a fixed number of digits after the decimal, e.g., &quot;f2&quot;, or round to a specified number of digits, e.g., &quot;r3&quot;.</p>
 </dd>
 <dt id='sum'>sum(<em>a</em>, <em>b</em>, <em>c</em>, …), product(<em>a</em>, <em>b</em>, <em>c</em>, …), length(<em>a</em>, <em>b</em>, <em>c</em>, …), range(<em>a</em>, <em>b</em>, <em>c</em>, …), mean(<em>a</em>, <em>b</em>, <em>c</em>, …), variance(<em>a</em>, <em>b</em>, <em>c</em>, …), stddev(<em>a</em>, <em>b</em>, <em>c</em>, …)</dt>
-<dd><p>Functions that accumulate a result from a list of arguments. Real numbers only.</p>
+<dd><p>Functions that accumulate a result from a list of arguments or a vector. Real numbers only.</p>
+</dd>
+<dt id='sum'>sum(<em>M</em>, <em>n</em>)</dt>
+<dd><p>Takes a matrix and sums either the rows or the columns.<br><code>sum(𝐌, 1)</code> will sum the columns and return a row vector.<br><code>sum(𝐌, 2)</code> will sum the rows and return a column vector.</p>
 </dd>
 <dt id='transpose'>transpose(<em>M</em>)</dt>
 <dd><p>Transpose a matrix.</p>
@@ -786,7 +795,7 @@ Col B	11	25	14`` 'kips'"><math><mrow><mi>P</mi><msub><mrow></mrow><mtext>a</mtex
 <dd><p>Vertical concatenation of: two matrices, or an element onto a vertical vector.</p>
 </dd>
 <dt id='zeros'>zeros(<em>m</em>, <em>n</em>)</dt>
-<dd><p>Returns a <em>m</em> × <em>n</em> matrix filled with zeros.  Real numbers only.</p>
+<dd><p>Returns a <em>m</em> × <em>n</em> matrix filled with zeros.  Arguments must be integers.</p>
 </dd>
 <dt id='γ'>Γ(<em>z</em>)</dt>
 <dd><p><a href='http://en.wikipedia.org/wiki/Gamma_function'>Gamma function</a><br>precision = <span class='hurmet-calc' data-entry='{100% if z" is a positive integer ≤ 100"; 15 digits otherwise}'><math><mrow><mo fence="true" form="prefix">{</mo><mtable class="tml-cases"><mtr><mtd><mrow><mn>100</mn><mi>%</mi></mrow></mtd><mtd><mrow><mrow><mspace width="0.2778em"></mspace><mrow><mrow><mi mathvariant="normal">i</mi></mrow><mrow><mi mathvariant="normal">f</mi></mrow></mrow><mspace width="0.2778em"></mspace></mrow><mi>z</mi><mtext> is a positive integer ≤ 100</mtext></mrow></mtd></mtr><mtr><mtd><mrow><mn>15</mn><mspace width="0.1667em"></mspace><mspace width="0.1667em"></mspace><mrow><mrow><mi mathvariant="normal">d</mi></mrow><mrow><mi mathvariant="normal">i</mi></mrow><mrow><mi mathvariant="normal">g</mi></mrow><mrow><mi mathvariant="normal">i</mi></mrow><mrow><mi mathvariant="normal">t</mi></mrow><mrow><mi mathvariant="normal">s</mi></mrow></mrow></mrow></mtd><mtd><mrow><mspace width="0.2778em"></mspace><mrow><mrow><mi mathvariant="normal">o</mi></mrow><mrow><mi mathvariant="normal">t</mi></mrow><mrow><mi mathvariant="normal">h</mi></mrow><mrow><mi mathvariant="normal">e</mi></mrow><mrow><mi mathvariant="normal">r</mi></mrow><mrow><mi mathvariant="normal">w</mi></mrow><mrow><mi mathvariant="normal">i</mi></mrow><mrow><mi mathvariant="normal">s</mi></mrow><mrow><mi mathvariant="normal">e</mi></mrow></mrow><mspace width="0.2778em"></mspace></mrow></mtd></mtr></mtable><mo fence="true" form="postfix"></mo></mrow></math></span></p>
