--- a/site/manual.html
+++ b/site/manual.html
@@ -344,9 +344,9 @@ print &quot;Hi!&quot;</code></pre></td></tr>
 </li>
 <li><p>An under-score within an identifier is allowed and will be interpreted to mean the start of a subscript.</p>
 </li>
-<li><p>If an identifier has only one letter, then an accent character may be written after it. Hurmet will render the accent above the letter, as in <span class='hurmet-calc' data-entry='θ̂'><math><mover><mi>θ</mi><mo stretchy="false" style="math-style:normal;math-depth:0;">^</mo></mover></math></span>¢.</p>
+<li><p>If an identifier has only one letter, then an accent character may be written after it. Hurmet will render the accent above the letter, as in <span class='hurmet-calc' data-entry='θ̂'><math><mover><mi>θ</mi><mo stretchy="false" style="math-style:normal;math-depth:0;">^</mo></mover></math></span>.</p>
 </li>
-<li><p>Primes may be appended to the very end, as in: <span class='hurmet-calc' data-entry='f_c′'><math><mrow><mi>f</mi><msubsup><mrow></mrow><mtext>c</mtext><mo lspace="0em" rspace="0em" class="tml-prime">′</mo></msubsup></mrow></math></span>¢.</p>
+<li><p>Primes may be appended to the very end, as in: <span class='hurmet-calc' data-entry='f_c′'><math><mrow><mi>f</mi><msubsup><mrow></mrow><mtext>c</mtext><mo lspace="0em" rspace="0em" class="tml-prime">′</mo></msubsup></mrow></math></span>.</p>
 </li>
 <li><p>The following keywords may not be used as variable names: <code>π</code>, <code>im</code>, <code>ℏ</code>, <code>pi</code>, <code>true</code>, <code>false</code>, <code>root</code>, <code>if</code>, <code>else</code>, <code>elseif</code>, <code>otherwise</code>, <code>end</code>, <code>and</code>, <code>or</code>, <code>in</code>, <code>to</code>.</p>
 <p><img src="images/identifier-railroad.svg" alt="letter letter-or-digit-or-accent prime"></p>
@@ -949,7 +949,7 @@ Col B	11	25	14`` 'kips'"><math><mrow><mi>P</mi><msub><mrow></mrow><mtext>a</mtex
 <p>Numeric result display types <strong>f</strong> and <strong>%</strong> can be set to any non-negative integer. The significant digit display types are limited to no more than 15 significant digits.</p>
 <h2 id='tests'>Tests</h2>
 <p>Hurmet test statements will send an error message if a criterion is not met.  For example, if you assign numeric values to two variables and then write:</p>
-<div class="indented"><p><code>@test F_u ≤ ϕR_n</code></p>
+<div class="indented"><p><code>@test P_u ≤ ϕR_n</code></p>
 </div>
 <p>The result will be one of these two messages:</p>
 <table class="nogrid"><tr><td style="width: 157px"><span class='hurmet-calc' data-entry='P_u ≤ ϕR_n, ok ✓'><math><mrow><mi>P</mi><msub><mrow></mrow><mtext>u</mtext></msub><mo>≤</mo></mrow><mrow><mrow><mrow><mi mathvariant="normal">ϕ</mi></mrow><mrow><mi mathvariant="normal">R</mi></mrow><msub><mrow></mrow><mtext>n</mtext></msub></mrow><mo separator="true">,</mo><mspace width="0.2222em"></mspace></mrow><mrow><mrow><mrow><mi mathvariant="normal">o</mi></mrow><mrow><mi mathvariant="normal">k</mi></mrow></mrow><mi>✓</mi></mrow></math></span></td><td style="width: 178px"><span class='hurmet-tex' data-entry='P_u \nleq ϕR_n, \colorbox{Salmon}{ n.g.}'><math><mrow><msub><mi>P</mi><mi>u</mi></msub><mo>≰</mo></mrow><mrow><mi>ϕ</mi><msub><mi>R</mi><mi>n</mi></msub><mo separator="true">,</mo></mrow><mrow><mrow mathbackground="#f8948c" style="padding:3pt 0 3pt 0;"><mspace width="3pt"></mspace><mrow><mtext> </mtext><mtext>n</mtext><mtext>.</mtext><mtext>g</mtext><mtext>.</mtext></mrow><mspace width="3pt"></mspace></mrow></mrow></math></span></td></tr>
