Remove separate beam page

--- a/site/manual.html
+++ b/site/manual.html
@@ -1211,9 +1211,7 @@ const titleRegEx = /([^.\\/]+)\.md$/;  // A helper.
 </ul>
 <h2 id='other-resources'>Other Resources</h2>
 <p>Civil and structural engineers may also find these items useful:</p>
-<ul><li class="tight"><p>Beam Analysis <a href='https://hurmet.app/ce/beamanalysis.html'>Diagram</a></p>
-</li>
-<li class="tight"><p>Concrete Column Interaction <a href='https://observablehq.com/@ronkok/concrete-column-interaction-diagram'>Diagram</a></p>
+<ul><li class="tight"><p>Concrete Column Interaction <a href='https://observablehq.com/@ronkok/concrete-column-interaction-diagram'>Diagram</a></p>
 </li>
 <li class="tight"><p>Fetchable TSV files with steel shape data: <a href='https://gist.githubusercontent.com/ronkok/d2ae5b3c74889e71c7bb8422b6017067/raw/AISC-v15-wideFlanges.tsv'>wide flanges</a>, <a href='https://gist.githubusercontent.com/ronkok/320677ddf9225afecf79bc831d5e1694/raw/AISC-v15-channels.tsv'>channels</a>, <a href='https://gist.githubusercontent.com/ronkok/a63582e3870c880981845631cbcb302a/raw/AISC-v15-HSS.tsv'>HSS</a>, <a href='https://gist.githubusercontent.com/ronkok/b7d6c68daeedb729ac23ab81cc77a154/raw/AISC-v15-pipes.tsv'>pipes</a>, <a href='https://gist.githubusercontent.com/ronkok/0c01e61709ade0b7738106462f831b45/raw/AISC-v15-tees.tsv'>tees</a>, <a href='https://gist.githubusercontent.com/ronkok/3a1e2d13672be26ef50e880347300536/raw/AISC-v15-2L.tsv'>double angles</a>, <a href='https://gist.githubusercontent.com/ronkok/4a489aa649aa955d069b26d761e6df5f/raw/AISC-v15-HP.tsv'>HP</a>, and <a href='https://gist.githubusercontent.com/ronkok/93927e8f227109cd9463ccd2409aa73e/raw/AISC-v15-MS.tsv'>MS</a>.</p>
 </li>
