--- a/site/index.html
+++ b/site/index.html
@@ -37,6 +37,7 @@
 <article>
 
 <div id="slogan"><h4>Calculate and communicate</h4></div>
+<p id="saved">Saved</p>
 
 <div id=editor class="pica" style="margin-bottom: 23px"></div>
 <div style="display: none" id="content">
