--- a/preview/index.html
+++ b/preview/index.html
@@ -23,6 +23,7 @@
 <article>
 
 <div id="slogan"><h4>Getting calculations right</h4></div>
+<p id="saved">Saved</p>
   
 <div id=editor class="pica" style="margin-bottom: 23px"></div>
 <div style="display: none" id="content">
