--- a/site/sample.html
+++ b/site/sample.html
@@ -56,6 +56,7 @@ Display:
 </div>  
 
 <div id="slogan"><h4>Calculate and communicate</h4></div>
+<p id="saved">Saved</p>
  
 <div id=editor class="pica" style="margin-bottom: 23px"></div>
 <div style="display: none" id="content">
